Update buildResponseBody method